# filter-calculator

./: CMakeLists.txt  Readme.md  main.cpp
qml/: main.qml  view.qrc
res/: res.qrc
src/: FilterCalculator.cpp  FilterCalculator.h
